<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.challenge.ChallengeStartFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/finish" />

            <TextView
                android:id="@+id/subtopic_titleStart"
                style="@style/big_TitleText"
                android:background="@drawable/title_bg"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title_start"
                android:layout_marginTop="20dp"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/challengeCountTxt"
                style="@style/big_TitleText"
                android:textSize="22sp"
                android:layout_marginTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/challengeCount" />

            <Button
                android:id="@+id/startBtn"
                android:backgroundTint="@color/grey_light4"
                style="@style/big_TitleText"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/start" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>