<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.challenge.code_challenge.CodeChallengeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@id/linearLayout_Progress"
            android:background="@drawable/progress_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/cancelCodeBtn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="20dp"
                android:layout_height="45dp"
                android:layout_gravity="right"
                android:gravity="center"
                android:padding="0dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/aldrin_bold"
                android:text="@string/CancelTxt"
                android:textColor="@color/grey_light2"
                android:textSize="30dp"
                android:scaleX="1.2"/>

            <ProgressBar
                android:id="@+id/code_progressBar"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                style="@style/Widget.Progressbar"
                android:scaleY="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/code_progressTxt"
                style="@style/big_TitleText"
                android:textColor="@color/grey_light2"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="CURRENT / TOTAL"
                android:textSize="18dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/code_rootLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.625"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout_Progress">

            <TextView
                android:id="@+id/code_title"
                style="@style/big_TitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="TITLE"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/code_desc"
                style="@style/small_DescriptionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="DESCRIPTION"
                android:textSize="16dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:padding="10dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/code_console"
            app:layout_constraintVertical_bias="0.0">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/code_submitBtn"
                android:backgroundTint="@color/grey_light4"
                style="@style/big_TitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/runBtn" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/code_console"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/code_rootLayout"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/code_classname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/console_top"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:text="@string/className"
                android:textAppearance="@style/big_TitleText"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue_console"
                android:padding="5dp"
                android:paddingStart="20dp"
                android:text="@string/classDefinitionStart"
                android:textAppearance="@style/big_TitleText"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/methodDefinitionTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue_console"
                android:padding="5dp"
                android:paddingStart="30dp"
                android:text="@string/methodDefinition"
                android:textAppearance="@style/big_TitleText"
                android:textSize="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/code_lineCount"
                    style="@style/big_TitleText"
                    android:textColor="@color/grey_light2"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/console_side"
                    android:gravity="top|right"
                    android:paddingEnd="5dp"
                    android:paddingStart="4dp"
                    android:textSize="15sp"
                    android:paddingVertical="5dp"
                    android:text="@string/lineCount" />

                <EditText
                    android:id="@+id/code_userInputTxt"
                    style="@style/Widget.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/blue_console"
                    android:gravity="top|left"
                    android:inputType="textMultiLine"
                    android:minHeight="100dp"
                    android:padding="5dp"
                    android:paddingEnd="20dp"
                    android:paddingStart="25dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/methodEndTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue_console"
                android:padding="5dp"
                android:paddingStart="30dp"
                android:text="@string/BracketEnd"
                android:textAppearance="@style/big_TitleText"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue_console"
                android:padding="5dp"
                android:layout_marginBottom="10dp"
                android:paddingStart="20dp"
                android:text="@string/BracketEnd"
                android:textAppearance="@style/big_TitleText"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/code_outputTxt"
                style="@style/big_TitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="15dp"
                android:paddingBottom="10dp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>